fixed the js app reference, ttu servers make you use ./ then the name, added some spacing for mobile

--- a/style.css
+++ b/style.css
@@ -853,11 +853,14 @@ Navbar
 @media only screen and (max-width:428px) {
     /* whole page */
     .container{
-        margin-top:10rem;
+        margin-top:8rem;
         grid-template-rows: 50vh 50vh 80vh 25vh 25vh 50vh 50vh;
     }
     .container-extend{
         grid-template-rows: 50vh 50vh 80vh 75vh 25vh 50vh 50vh;
+    }
+    .current-tab{
+        height:3rem;
     }
     /* video background section */
     .video-container{
@@ -875,6 +878,7 @@ Navbar
     }
     /* card section  */
     .card-section{
+        margin-top:1rem;
         flex-direction: column;
         align-items: center;
     }
@@ -901,6 +905,7 @@ Navbar
         display:none;
     }
     .feature-box{
+        margin-top:1rem;
         height:80vh;
     }
     .feature-box-text{
@@ -950,6 +955,7 @@ Navbar
         justify-content: space-between;
         align-items: center;
         padding:0;
+        margin-top:1rem;
     }
     .image-card-section h2{
         font-size:1.5rem;
@@ -987,7 +993,7 @@ Navbar
     .banner-section{
         overflow: hidden;
         width:100%;
-        margin-top:1rem;
+        margin-top:3rem;
         margin-bottom:0;
         background-color: white;
     }
